fixed center align nav menu in mobile MQ

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,6 @@ textarea {
     font-size: 1.5em;
     display: block;
     width: 100%;
-    margin-left: -1em;
 }
 
 .logo {
